--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "webpack-dev-server --open --confing webpack.dev.js",
-    "build": "babel test.es -o test.js"
+    "build": "webpack --config  webpack.prod.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^4.5.0",
     "webpack": "^5.1.0",
     "webpack-cli": "^4.0.0",
