--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "syasu",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack-dev-server --open --confing webpack.dev.js",
+    "dev": "webpack serve --config webpack.dev.js",
     "build": "webpack --config  webpack.prod.js"
   },
   "devDependencies": {
@@ -18,7 +18,6 @@
     "html-webpack-plugin": "^4.5.0",
     "webpack": "^5.1.0",
     "webpack-cli": "^4.0.0",
-    "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.2.0"
   },
   "dependencies": {
