--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "css-loader": "^5.0.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "style-loader": "^2.0.0"
+    "style-loader": "^2.0.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
