--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "html-webpack-plugin": "^4.5.0",
     "webpack": "^5.1.0",
     "webpack-cli": "^4.0.0",
+    "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.2.0"
   },
   "dependencies": {
     "css-loader": "^5.0.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "style-loader": "^2.0.0",
-    "webpack-dev-server": "^3.11.0"
+    "style-loader": "^2.0.0"
   }
 }
